--- a/about.html
+++ b/about.html
@@ -36,6 +36,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+ @media (max-width: 920px) {
+  h2{
+    font-size48px;
+  }
+ }
 
 body {
   background-color: #000;
@@ -357,6 +362,8 @@ footer {
   align-items: center;
   text-decoration: none;
   text-transform: uppercase;
+  display: none;
+
 }
 .login:hover {
   color: #8d8d8d !important;
@@ -474,8 +481,9 @@ nav .socials {
     <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
     <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
+           <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active">Hire us</a></li>
+            <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html" class="current">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
         <br>
@@ -515,7 +523,7 @@ nav .socials {
         </div>
         </div>
     </section>
-
+</div>
       <section class="hero-section">
     <div class="container">
       <!-- Left Content -->
@@ -553,7 +561,6 @@ nav .socials {
     </div>
   </section>
 
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -561,7 +568,7 @@ nav .socials {
 
             if (logo) {
                 logo.onclick = function() {
-                    window.location.href = "/";
+                    window.location.href = "index.html";
                 };
             }
         });
