--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,11 @@
     transition: .2s;
     font-family: "Archivo Black", sans-serif;
 }
+ @media (max-width: 920px) {
+  h2{
+    font-size48px;
+  }
+ }
 *:focus {
   border: none;
   outline: none;
@@ -227,6 +232,7 @@ h2 {
   text-decoration: none;
   gap: .5em;
   font-weight: bold;
+  display: none;
   
 }
 .login:hover {
@@ -576,8 +582,9 @@ nav .socials {
         <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
+             <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active current">Hire us</a></li>
+            <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
            <br>
@@ -744,7 +751,7 @@ document.getElementById('contact-form').addEventListener('submit', function(even
 
             if (logo) {
                 logo.onclick = function() {
-                    window.location.href = "/";
+                    window.location.href = "index.html";
                 };
             }
         });
