--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="googlebot" content="index, follow">
 <meta name="bingbot" content="index, follow">
 <meta name="slurp" content="index, follow">
-    <title>Danny Agency</title>
+    <title>Danny Agency - Transforming Visions Into Digital Reality</title>
     <meta name="google-site-verification" content="Yxr7MnnfxCep05G4dTH-JyiE33Gf1260yhimH0zrpYs" />
     <meta name="description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
 <meta name="keywords" content="web development, website design, SEO, marketing, 3D graphics, graphic design, Danny Agency, Lagos, Nigeria">
@@ -40,6 +40,11 @@
     transition: .2s;
     font-family: "Archivo Black", sans-serif;
 }
+ @media (max-width: 920px) {
+  h2{
+    font-size48px;
+  }
+ }
 body, html {
     margin: 0;
     padding: 0;
@@ -335,6 +340,7 @@ footer {
   text-decoration: none;
   gap: .5em;
   font-weight: bold;
+  display: none;
 }
 .login:hover {
   color: #8d8d8d !important;
@@ -539,8 +545,9 @@ nav .socials {
     <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
         <ul>
           <li><a class="current" href="index.html">Home</a></li>
+             <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active">Hire us</a></li>
+            <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
           <br>
@@ -655,7 +662,7 @@ nav .socials {
     const logo = document.querySelector('.logo');
     if (logo) {
         logo.onclick = function() {
-            window.location.href = "/";
+            window.location.href = "index.html";
         };
     }
 });
