--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 }
  @media (max-width: 920px) {
   h2{
-    font-size48px;
+    font-size:48px;
   }
  }
 body, html {
@@ -794,7 +794,7 @@ h2 {
 .btn-outline:hover {
   background-color: #fff;
   color: #000;
-  transform: translateX(-2%;
+  transform: translateX(2%);
 }
 
 /* Responsive */
