--- a/faqs.html
+++ b/faqs.html
@@ -41,12 +41,11 @@
     outline: none;
 }
 
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
-
 body, html {
     margin: 0;
     padding: 0;
@@ -89,6 +88,7 @@ body {
             width: 2em;
             position: relative;
             left: .4em;
+            cursor: pointer;
         }
         nav ul {
             display: flex;
