--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     transition: .2s;
     font-family: "Archivo Black", sans-serif;
 }
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
 body, html {
@@ -89,6 +89,8 @@ body {
             width: 2em;
             position: relative;
             left: .4em;
+            cursor: pointer;
+
         }
         nav ul {
             display: flex;
