--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,9 @@
 *::-webkit-scrollbar {
   display: none;
 }
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
 body, html {
@@ -219,6 +219,8 @@ body {
             width: 2em;
             position: relative;
             left: .4em;
+            cursor: pointer;
+
         }
         nav ul {
             display: flex;
