--- a/about.html
+++ b/about.html
@@ -36,12 +36,11 @@
   padding: 0;
   box-sizing: border-box;
 }
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
-
 body {
   background-color: #000;
   color: #ccc;
@@ -51,14 +50,6 @@ body {
 
 .hero-section {
   padding: 80px 20px;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 60px;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 /* Left text */
@@ -176,6 +167,8 @@ body {
             width: 2em;
             position: relative;
             left: .4em;
+            cursor: pointer;
+
         }
         nav ul {
             display: flex;
