--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
     transition: .2s;
     font-family: "Archivo Black", sans-serif;
 }
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
 *:focus {
@@ -120,6 +120,7 @@ h2 {
             width: 2em;
             position: relative;
             left: .4em;
+            cursor: pointer;
         }
         nav ul {
             display: flex;
