--- a/services.html
+++ b/services.html
@@ -38,9 +38,9 @@
   border: none;
   outline: none;
 }
- @media (max-width: 920px) {
+ @media (min-width: 620px) {
   h2{
-    font-size:48px;
+    font-size:48px !important;
   }
  }
 body, html {
@@ -84,6 +84,8 @@ body {
             width: 2em;
             position: relative;
             left: .4em;
+           cursor: pointer;
+
         }
         nav ul {
             display: flex;
