--- a/services.html
+++ b/services.html
@@ -266,7 +266,7 @@ nav .active:hover {
   transition: .3s ease-in-out !important
 }
 .current {
-            color: #8d8d8d;
+     color: #8d8d8d;
         }
 .form-wrap {
   display: flex;
@@ -472,8 +472,8 @@ nav .socials {
         <a href="login.html" class="login current"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
-             <li><a href="services.html">Services</a></li>
-            <li><a class="grad-text" href="portfolio.html">Works</a></li>
+             <li><a class="current" href="services.html">Services</a></li>
+            <li><a href="portfolio.html">Works</a></li>
             <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
@@ -518,27 +518,7 @@ nav .socials {
             </div>
         </div>
     </section>
-   <div class="form-wrap">
-   <form id="loginForm" autocomplete="false">
-     <h1>SIGN IN</h1>
-     <p>Sign in to your account to continue</p>
-     <br>
-     <div class="wrap">
-         
-       <input type="text" required="true" placeholder=" " title="Email" autofocus="false" autocomplete="new-email" id="email">
-     <label for="email">Email</label>
-     </div>
-     <div class="wrap">
-       <input type="password" required="true" placeholder=" " title="Password" id="password" class="password">
-       
-     <label for="password">Password</label>
-     <button id="toggleButton"><i class="bi bi-eye-fill"></i></button>
-     </div>
-     <div class="button-cover">
-     <button id="submitBtn">Log In</button>
-     </div>
-   </form>
-   </div>
+   
 <footer>
   <div class="socials">
             <a href="https://instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
