--- a/contact.html
+++ b/contact.html
@@ -576,7 +576,7 @@ nav .socials {
           <li><a class="grad-text" href="index.html">Home</a></li>
              <li><a href="services.html">Services</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html">Hire us</a></li>
+            <li><a class="current" href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
            <br>
