--- a/faqs.html
+++ b/faqs.html
@@ -485,7 +485,7 @@ nav .socials {
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
             <li><a href="contact.html">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="faqs.html" class="current">FAQs</a></li>
+            <li><a class="current" href="faqs.html" class="current">FAQs</a></li>
             <br>
              <div class="socials">
              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
