--- a/about.html
+++ b/about.html
@@ -477,7 +477,16 @@ body {
     padding: 20px;
   }
 }
+.icon {
+  font-size: 2rem;
+  color: #00e0ff;
+  margin-bottom: 15px;
+  transition: color 0.3s ease;
+}
 
+.card:hover .icon {
+  color: #00ffff;
+}
     </style>
 
 <nav>
