--- a/services.html
+++ b/services.html
@@ -485,6 +485,7 @@ nav .socials {
         </div>
         </ul>
     </nav>
+        <h2>SERVICES</h2>
        <section class="what-we-do text-white text-center py-5">
         <h2>What We Do</h2>
         <div class="row">
