--- a/about.html
+++ b/about.html
@@ -413,7 +413,7 @@ body {
 }
 
 .hero-text p {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   margin-bottom: 20px;
 }
 
@@ -432,6 +432,10 @@ body {
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   text-align: left;
+}
+
+card p{
+  color: #ccc;
 }
 
 .card:hover {
@@ -512,7 +516,6 @@ body {
         </div>
         </ul>
 </nav>
-<div class="container">
     <section class="about-us text-white text-left py-5">
         
         <div class="about-wrap">
@@ -541,7 +544,6 @@ body {
         </div>
         </div>
     </section>
-</div>
 
   <section class="hero-section">
     <div class="container">
