--- a/about.html
+++ b/about.html
@@ -296,7 +296,7 @@ nav .active:hover {
     margin-bottom: 20px;
 }
 .about-us {
-    padding: .5em;
+    padding: 2em;
 }
 .about-us li {
     list-style: square;
@@ -425,8 +425,8 @@ body {
 }
 
 .card {
-  background-color: #111;
-  border: 1px solid #222;
+  background-color: #1a1a1a;
+  border: 1px solid #ccc;
   border-radius: 12px;
   padding: 30px 25px;
   transition: all 0.3s ease;
@@ -483,15 +483,10 @@ card p{
 }
 .icon {
   font-size: 2rem;
-  color: #00e0ff;
   margin-bottom: 15px;
   transition: color 0.3s ease;
 }
-
-.card:hover .icon {
-  color: #00ffff;
-}
-    </style>
+  </style>
 
 <nav>
   <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo" class="logo"> 
@@ -563,22 +558,22 @@ card p{
       <!-- Right Content (Cards) -->
       <div class="hero-cards">
         <div class="card">
-          <div class="icon"><i class="fas fa-bullseye"></i></div>
+          <div class="icon"><i class="fas fa-bullseye" style="color: #baa5ff;"></i></div>
           <h3>Outcome-Obsessed</h3>
           <p>We prioritize meaningful results over outputs — focusing on measurable performance, impact, and lasting business value.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-handshake"></i></div>
+          <div class="icon"><i class="fas fa-handshake" style="color: #f9b0b0;"></i></div>
           <h3>Partnership-Driven</h3>
           <p>We operate as an extension of your team, aligning deeply with your goals and staying committed well beyond launch.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-lightbulb"></i></div>
+          <div class="icon"><i class="fas fa-lightbulb" style="color: #faffcf;"></i></div>
           <h3>Founder-Minded</h3>
           <p>We bring an entrepreneurial mindset to every engagement, treating your vision and challenges as our own.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-layer-group"></i></div>
+          <div class="icon"><i class="fas fa-layer-group" style="color: #c3fff5;"></i></div>
           <h3>Stage-Ready</h3>
           <p>From early-stage validation to enterprise-scale execution, we adapt our process to meet your organization’s current maturity and future ambition.</p>
         </div>
