--- a/about.html
+++ b/about.html
@@ -434,19 +434,17 @@ body {
   text-align: left;
 }
 
-card p{
+.card p{
   color: #ccc;
 }
 
 .card:hover {
-  background-color: #1a1a1a;
-  transform: translateY(-6px);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
 
 .icon {
   font-size: 2rem;
-  color: #00e0ff;
   margin-bottom: 15px;
 }
 
@@ -558,22 +556,22 @@ card p{
       <!-- Right Content (Cards) -->
       <div class="hero-cards">
         <div class="card">
-          <div class="icon"><i class="fas fa-bullseye" style="color: #baa5ff;"></i></div>
+          <div class="icon"><i class="fas fa-bullseye" style="color: #4f1aff;"></i></div>
           <h3>Outcome-Obsessed</h3>
           <p>We prioritize meaningful results over outputs — focusing on measurable performance, impact, and lasting business value.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-handshake" style="color: #f9b0b0;"></i></div>
+          <div class="icon"><i class="fas fa-handshake" style="color: #ef0000;"></i></div>
           <h3>Partnership-Driven</h3>
           <p>We operate as an extension of your team, aligning deeply with your goals and staying committed well beyond launch.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-lightbulb" style="color: #faffcf;"></i></div>
+          <div class="icon"><i class="fas fa-lightbulb" style="color: #e5ff00;"></i></div>
           <h3>Founder-Minded</h3>
           <p>We bring an entrepreneurial mindset to every engagement, treating your vision and challenges as our own.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-layer-group" style="color: #c3fff5;"></i></div>
+          <div class="icon"><i class="fas fa-layer-group" style="color: #00ffd5;"></i></div>
           <h3>Stage-Ready</h3>
           <p>From early-stage validation to enterprise-scale execution, we adapt our process to meet your organization’s current maturity and future ambition.</p>
         </div>
