--- a/about.html
+++ b/about.html
@@ -440,7 +440,8 @@ body {
 
 .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 0 8px 2px rgba(200, 200, 200, 0.4), 
+                0 0 15px 8px rgba(200, 200, 200, 0.2);
 }
 
 .icon {
@@ -556,7 +557,7 @@ body {
       <!-- Right Content (Cards) -->
       <div class="hero-cards">
         <div class="card">
-          <div class="icon"><i class="fas fa-bullseye" style="color: #4f1aff;"></i></div>
+          <div class="icon"><i class="fas fa-bullseye" style="color: #d000ff;"></i></div>
           <h3>Outcome-Obsessed</h3>
           <p>We prioritize meaningful results over outputs — focusing on measurable performance, impact, and lasting business value.</p>
         </div>
