--- a/about.html
+++ b/about.html
@@ -322,6 +322,12 @@ nav .socials {
     justify-content: center;
     gap: 1em;
 }
+.about-us {
+    padding: 1.2em;
+}
+.hero-section {
+  padding: 30px 10px;
+}
 .copyright {
     font-size: 12px;
 
@@ -392,7 +398,7 @@ body {
 }
 
 .hero-section {
-  padding: 80px 20px;
+  padding: 30px 50px;
 }
 
 .container {
@@ -400,7 +406,8 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 60px;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 0;
+  padding: 0 0;
 }
 
 /* Left text */
@@ -436,6 +443,7 @@ body {
 
 .card p{
   color: #ccc;
+  font-size: 0.9rem;
 }
 
 .card:hover {
@@ -469,7 +477,7 @@ body {
 
 @media (max-width: 600px) {
   .hero-text h1 {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 
   .hero-cards {
