--- a/portfolio.html
+++ b/portfolio.html
@@ -768,14 +768,14 @@ h2 {
 
 /* Solid button */
 .btn-primary {
-  background-color: #fff;
+  background-color: #ccc;
   color: #000;
-  border: 2px solid #fff;
+  border: 2px solid #ccc;
 }
 
 .btn-primary:hover {
   background-color: transparent;
-  color: #fff;
+  color: #ccc;
   transform: translateX(-2%);
 }
 
@@ -783,11 +783,11 @@ h2 {
 .btn-outline {
   background-color: transparent;
   color: #ccc;
-  border: 2px solid #444;
+  border: 2px solid #ccc;
 }
 
 .btn-outline:hover {
-  background-color: #fff;
+  background-color: #ccc;
   color: #000;
   transform: translateX(2%);
 }
