--- a/services.html
+++ b/services.html
@@ -189,7 +189,7 @@ footer {
   align-items: center;
   padding: 2em 5%;
   flex-direction: column;
-  position: fixed;
+  position: static;
   bottom: 0;
   left: 0;
   width: 90%;
@@ -416,7 +416,7 @@ nav .socials {
   }
 .what-we-do {
   background-color: #000;
-  padding: 80px 20px;
+  padding: 60px 20px;
 }
 
 .what-we-do h2 {
@@ -425,6 +425,10 @@ nav .socials {
   font-size: 2rem;
   margin-bottom: 50px;
   letter-spacing: 2px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
 }
 
 /* Layout */
@@ -432,7 +436,7 @@ nav .socials {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
