--- a/contact.html
+++ b/contact.html
@@ -649,7 +649,7 @@ nav .socials {
         </div>
 
         <div class="button-cover">
-            <button type="submit">Send</button>
+            <button type="submit">Send Message</button>
             <div id="success-toast"></div>
         </div>
     </form>
