--- a/portfolio.html
+++ b/portfolio.html
@@ -803,6 +803,9 @@ h2 {
     text-align: center;
   }
 }
+.current {
+    color: #8d8d8d;
+}
     </style>
     <nav>
      <img src="logo.png" alt="Logo" class="logo" loading="lazy">
