--- a/about.html
+++ b/about.html
@@ -565,22 +565,22 @@ body {
       <!-- Right Content (Cards) -->
       <div class="hero-cards">
         <div class="card">
-          <div class="icon"><i class="fas fa-bullseye" style="color: #d000ff;"></i></div>
+          <div class="icon"><i class="fas fa-bullseye" style=" background: linear-gradient(135deg, #00f260, #0575e6); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Outcome-Obsessed</h3>
           <p>We prioritize meaningful results over outputs — focusing on measurable performance, impact, and lasting business value.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-handshake" style="color: #ef0000;"></i></div>
+          <div class="icon"><i class="fas fa-handshake" style=" background: linear-gradient(135deg, #00ffe7, #007bff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Partnership-Driven</h3>
           <p>We operate as an extension of your team, aligning deeply with your goals and staying committed well beyond launch.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-lightbulb" style="color: #e5ff00;"></i></div>
+          <div class="icon"><i class="fas fa-lightbulb" style=" background: linear-gradient(135deg, #00ffe7, #007bff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Founder-Minded</h3>
           <p>We bring an entrepreneurial mindset to every engagement, treating your vision and challenges as our own.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-layer-group" style="color: #00ffd5;"></i></div>
+          <div class="icon"><i class="fas fa-layer-group" style="  background: linear-gradient(135deg, #f7971e, #ffd200); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Stage-Ready</h3>
           <p>From early-stage validation to enterprise-scale execution, we adapt our process to meet your organization’s current maturity and future ambition.</p>
         </div>
