--- a/about.html
+++ b/about.html
@@ -570,12 +570,12 @@ body {
           <p>We prioritize meaningful results over outputs — focusing on measurable performance, impact, and lasting business value.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-handshake" style=" background: linear-gradient(135deg, #00ffe7, #007bff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
+          <div class="icon"><i class="fas fa-handshake" style=" background: linear-gradient(135deg, #00ffe7, #ff3700); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Partnership-Driven</h3>
           <p>We operate as an extension of your team, aligning deeply with your goals and staying committed well beyond launch.</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-lightbulb" style=" background: linear-gradient(135deg, #00ffe7, #007bff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
+          <div class="icon"><i class="fas fa-lightbulb" style=" background: linear-gradient(135deg, #fbff00, #007bff); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i></div>
           <h3>Founder-Minded</h3>
           <p>We bring an entrepreneurial mindset to every engagement, treating your vision and challenges as our own.</p>
         </div>
